--- a/css/style.css
+++ b/css/style.css
@@ -422,17 +422,13 @@ body.offline #widget-holder .app:not(.shortcut):not(.offline-enabled) {
 #logo-button {
   margin-top: 0px;
   margin-bottom: 4px;
-  -webkit-filter: grayscale(100%);
   height: 22px !important;
 
   background-color: transparent;
-  background-image: url("/images/antp.png");
-  background-position: 0px -4px;
+  background-image: url("/images/antp-flat-128.png");
+  background-position: 0px 4px;
   background-size: 32px;
   background-repeat: no-repeat;
-}
-#logo-button:hover {
-  -webkit-filter: grayscale(0%);
 }
 #config-button {
   background-color: transparent;
