--- a/extension/css/style.css
+++ b/extension/css/style.css
@@ -1270,3 +1270,21 @@ body > .widget-drawer-app img {
 .qtip-bootstrap {
   border-radius: 0;
 }
+
+div.jGrowl div.jGrowl-notification,
+div.jGrowl div.jGrowl-closer {
+  background-color: #FFF;
+  opacity: 1;
+  color: black;
+  box-shadow: 0px 0px 40px 2px rgba(0, 0, 0, .5);
+  padding: 15px;
+  margin: 25px;
+}
+div.jGrowl div.jGrowl-notification div.jGrowl-close {
+  font-size: 1.5em;
+}
+
+div.jGrowl div.jGrowl-notification div.jGrowl-header {
+  font-size: 1.3em;
+  padding-bottom: 5px;
+}
