--- a/extension/css/style.css
+++ b/extension/css/style.css
@@ -1279,6 +1279,7 @@ div.jGrowl div.jGrowl-closer {
   box-shadow: 0px 0px 40px 2px rgba(0, 0, 0, .5);
   padding: 15px;
   margin: 25px;
+  border-radius: 0;
 }
 div.jGrowl div.jGrowl-notification div.jGrowl-close {
   font-size: 1.5em;
